# bertalign

./: pyproject.toml  requirements.txt  setup.py
bertalign/: __init__.py  aligner.py  encoder.py  languages.py  utils.py
