[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "Bertalign"
version = "0.1.0"
description = "An automatic multilingual sentence aligner."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numba>=0.65.1",
    "faiss-gpu>=1.14.3",
    "googletrans>=4.0.2",
    "sentence-splitter>=1.4",
    "sentence-transformers>=5.6.0",
]

[project.urls]
Repository = "https://github.com/kerivin/bertalign"