[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "Bertalign"
version = "0.1.0"
description = "An automatic multilingual sentence aligner."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numba>=0.65.1",
    # "faiss-gpu>=1.14.3",
    "sentence-transformers>=5.6.0",
]

[project.optional-dependencies]
cpu = ["faiss-cpu>=1.14.3"]
gpu = ["faiss-gpu>=1.14.3"]

[project.urls]
Repository = "https://github.com/kerivin/bertalign"